<?xml version="1.0"?>
<package format="3">
  <name>hello_world_simulation</name>
  <version>2.0.0</version>
  <description>
    AWS RoboMaker simulation package with a TurtleBot3 in an empty Gazebo world.
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
