<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_ros2</name>
  <version>2023.1.3</version>
  <description>Interface between Webots and ROS2</description>

  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">http://wiki.ros.org/webots_ros2</url>
  <url type="bugtracker">https://github.com/cyberbotics/webots_ros2/issues</url>
  <url type="repository">https://github.com/cyberbotics/webots_ros2</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_epuck</exec_depend>
  <exec_depend>webots_ros2_importer</exec_depend>
  <exec_depend>webots_ros2_mavic</exec_depend>
  <exec_depend>webots_ros2_msgs</exec_depend>
  <exec_depend>webots_ros2_tesla</exec_depend>
  <exec_depend>webots_ros2_tiago</exec_depend>
  <exec_depend>webots_ros2_turtlebot</exec_depend>
  <exec_depend>webots_ros2_universal_robot</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>webots_ros2_tests</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
